--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/config": "^8.1.2",
     "@expo/metro-config": "^0.10.7",
     "@fanchenbao/react-native-scroll-indicator": "^0.2.2",
+    "@kolking/react-native-rating": "^1.1.2",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.5.0",
