--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/auth": "^18.5.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
@@ -46,11 +47,14 @@
     "react-native-image-picker": "^7.0.1",
     "react-native-image-viewing": "^0.2.2",
     "react-native-modal": "^13.0.1",
+    "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "^6.2.2",
+    "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1"
