--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/config": "^8.1.2",
     "@expo/metro-config": "^0.10.7",
+    "@gorhom/bottom-sheet": "^4",
     "@kolking/react-native-rating": "^1.1.2",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/blur": "^4.3.2",
@@ -22,6 +23,7 @@
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.6.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^49.0.0",
     "expo-application": "~5.3.0",
@@ -36,6 +38,7 @@
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
     "firebase": "^10.5.0",
+    "lottie-react-native": "^6.3.1",
     "moment": "^2.29.4",
     "patch-package": "^8.0.0",
     "randomcolor": "^0.6.2",
@@ -50,6 +53,7 @@
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.11.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-snap-carousel": "^3.9.1",
@@ -60,7 +64,9 @@
     "redux": "^4.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro": "^0.80.0",
+    "metro-core": "^0.80.0"
   },
   "private": true,
   "resolutions": {
