hoàn thiện chức năng hiển thị thông báo khi tạo vé, cập nhật vé, bật/tắt nhận thông báo, xem lịch sử hoạt động admin, push notification, lưu setting

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,6 +154,8 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation 'com.onesignal:OneSignal:[5.0.0, 5.99.99]'
+    implementation platform('com.google.firebase:firebase-bom:32.5.0')
+    implementation 'com.google.firebase:firebase-analytics'
   
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
