--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
+    "expo-device": "~5.4.0",
     "expo-linking": "~5.0.2",
     "expo-modules-autolinking": "^1.5.1",
+    "expo-notifications": "~0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
@@ -46,6 +48,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-device-info": "^10.11.0",
+    "react-native-drawer-layout": "^3.2.2",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-picker": "^7.0.1",
@@ -59,6 +62,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.1.7",
     "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
     "socket.io-client": "^4.7.2"
